--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,55 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Chat with your friends</h1>
+    <div class="page" id="loginPage">
+      <h1>Qual é o seu nome?</h1>
+      <input type="text" name="" id="loginNameInput" />
+    </div>
+
+    <div class="page" id="chatPage">
+      <div class="chatArea">
+        <ul class="chatList">
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+            <li class="m-status">Fulano entrou da sala</li>
+            <li class="m-status">Fulano saiu da sala</li>
+            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
+            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
+        </ul>
+        <ul class="userList">
+            <li>Gabriel (você)</li>
+            <li>Lucas</li>
+            <li>Paulo</li>
+        </ul>
+    </div>
+    <div class="chatInput">
+        <input type="text" id="chatTextInput" placeholder="Digite uma mesagem (e aperte ENTER)">
+    </div>
   </body>
 </html>
