--- a/public/index.html
+++ b/public/index.html
@@ -14,48 +14,14 @@
 
     <div class="page" id="chatPage">
       <div class="chatArea">
-        <ul class="chatList">
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-            <li class="m-status">Fulano entrou da sala</li>
-            <li class="m-status">Fulano saiu da sala</li>
-            <li class="m-txt"><span class="me">Gabriel</span> Olá, tudo bem?</li>
-            <li class="m-txt"><span>Lucas</span> Olá, tudo bem?</li>
-        </ul>
-        <ul class="userList">
-            <li>Gabriel (você)</li>
-            <li>Lucas</li>
-            <li>Paulo</li>
-        </ul>
+        <ul class="chatList"></ul>
+        <ul class="userList"></ul>
     </div>
     <div class="chatInput">
         <input type="text" id="chatTextInput" placeholder="Digite uma mesagem (e aperte ENTER)">
     </div>
+
+    <script src = "/socket.io/socket.io.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
